<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/red"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/item_home" />
        <item
            android:id="@+id/green"
            android:icon="@drawable/search_tab_icon"
            android:title="@string/item_search" />
        <item
            android:id="@+id/blue"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/item_profile" />
    </group>

    <item android:title="Sub items">
        <menu>
            <item
                android:id="@+id/nav_example_sub_item_1"
                android:title="Example Sub Item #1" />

            <item
                android:id="@+id/nav_example_sub_item_2"
                android:title="Example Sub Item #1" />
            <item
                android:id="@+id/nav_example_sub_item_3"
                android:title="Example Sub Item #1" />
            <item
                android:id="@+id/nav_example_sub_item_4"
                android:title="Example Sub Item #1" />
            <item
                android:id="@+id/nav_example_sub_item_5"
                android:title="Example Sub Item #1" />
            <item
                android:id="@+id/nav_example_sub_item_6"
                android:title="Example Sub Item #1" />
            <item
                android:id="@+id/nav_example_sub_item_11"
                android:title="Example Sub Item #1" />
            <item
                android:id="@+id/nav_example_sub_item_7"
                android:title="Example Sub Item #1" />
            <item
                android:id="@+id/nav_example_sub_item_8"
                android:title="Example Sub Item #1" />
            <item
                android:id="@+id/nav_example_sub_item_9"
                android:title="Example Sub Item #1" />
            <item
                android:id="@+id/nav_example_sub_item_10"
                android:title="Example Sub Item #1" />
        </menu>
    </item>
</menu>